--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href="/static/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet" />
+	<%-stylesheets%>
 	<style>
 	    body {
 		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -54,8 +55,8 @@
 	<div class="container">
 	    <%-body -%>
 	</div>
-	<%-scripts%>
 	<script src="/static/js/jquery-1.9.1.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
+	<%-scripts%>
     </body>
 </html>
