--- a/components/vehicles/views/profile-page.ejs
+++ b/components/vehicles/views/profile-page.ejs
@@ -104,7 +104,6 @@ var suburb = '';
 var formActionsDisplay = isSameSeller ? '' : 'none';
 %>
 
-<form action="." method="get" >
 	<div class="page-header">
 		<h1>Vehicle <small><%=vehicle.market%></small></h1>
 	</div>
@@ -328,7 +327,6 @@ var formActionsDisplay = isSameSeller ? '' : 'none';
 		</div>
 
 		<div class="span6">
-			<form>
 				<fieldset>
 					<legend>Email seller</legend>
 
@@ -344,11 +342,9 @@ var formActionsDisplay = isSameSeller ? '' : 'none';
 					<button class="btn btn-primary">Send</button>
 					<button class="btn btn-link">Cancel</button>
 				</fieldset>
-			</form>
 		</div>
 	</div>
 	<div class="form-actions" style="display:<%=formActionsDisplay%>">
 		<a href="/vehicle/edit" class="btn">Edit</a>
-		<button class="btn btn-link">Delete</button>
+		<a href="/vehicle/remove" class="btn btn-link">Delete</a>
 	</div>
-</form>
