The components have been merged into the main app.

--- a/views/sellers/password-reset-form.ejs
+++ b/views/sellers/password-reset-form.ejs
@@ -1,4 +1,4 @@
-<% layout('../../../views/layout') -%>
+<% layout('../../views/layout') -%>
 <% script('/assets/js/reset-password.js') -%>
 
 <form id="reset" method="post" action="/seller/password/reset">
