--- a/views/sellers/registration-form.ejs
+++ b/views/sellers/registration-form.ejs
@@ -1,4 +1,4 @@
-<% layout('../../../views/layout') -%>
+<% layout('../../views/layout') -%>
 <% script('../static/js/sellers/registration-form.js') -%>
 
 <%
