--- a/views/vehicles/registration-form.ejs
+++ b/views/vehicles/registration-form.ejs
@@ -1,6 +1,6 @@
-<% layout('../../../views/layout') -%>
-<% script('../static/js/vehicles/registration-form.js') -%>
-<% script('../../../static/js/bootstrap.file-input.js') -%>
+<% layout('../../views/layout') -%>
+<% script('../../static/js/vehicles/registration-form.js') -%>
+<% script('../../static/js/bootstrap.file-input.js') -%>
 
 <%
 var manufacturersString = JSON.stringify(makes);
