--- a/views/sellers/email-address-verified-page.ejs
+++ b/views/sellers/email-address-verified-page.ejs
@@ -1,4 +1,4 @@
-<% layout('../../../views/layout') -%>
+<% layout('../../views/layout') -%>
 
 <%
 var noError = isSellerNotExist === '' && isHashNotMatch === '' ? '' : 'none';
