--- a/views/orders/cart-form.ejs
+++ b/views/orders/cart-form.ejs
@@ -12,13 +12,17 @@
 		</thead>
 		<tbody>
 			<% for (var i = 0; i < items.length; i++) { var item = JSON.parse(items[i]); %>
+			<input	type="hidden" name="item<%=i%>[_id]" value="<%=item._id%>" >
+			<input	type="hidden" name="item<%=i%>[cost]" value="" class="cardog-cost" 
+					data-custom="<%=item._id%>"	>
 			<tr>
 				<td>
-					<%=item.type.make%>&nbsp;<%=item.type.model%>&nbsp;<%=item.type.year%>
-					<input type="hidden" name="items[][_id]" value="<%=item._id%>" >
+					<%=item.type.make%>&nbsp;
+					<%=item.type.model%>&nbsp;
+					<%=item.type.year%>
 				</td>
 				<td>
-					<select name="items[][weeks]"  class="span1 cardog-weeks" data-custom="<%=item._id%>">
+					<select	name="item<%=i%>[weeks]" class="cardog-weeks span1" data-custom="<%=item._id%>"	>
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
@@ -27,7 +31,7 @@
 						<option>6</option>
 					</select>
 				</td>
-				<td name="items[][cost]" value="" class="cardog-cost" data-custom="<%=item._id%>"></td>
+				<td	class="cardog-cost" data-custom="<%=item._id%>"	></td>
 			</tr>
 			<% } %>
 			<tr>
