--- a/views/sellers/password-forgot-form.ejs
+++ b/views/sellers/password-forgot-form.ejs
@@ -4,7 +4,7 @@
 var emailAlertType = emailError === '' ? '' : 'error';
 %>
 
-<form method="post" action="/seller/password/forgot">
+<form method="post" action="/password/forgot">
 	<fieldset>
 		<legend>Forgotten Password</legend>
 
