--- a/views/sellers/password-reset-form.ejs
+++ b/views/sellers/password-reset-form.ejs
@@ -1,7 +1,7 @@
 <% layout('../../views/layout') -%>
 <% script('/assets/js/reset-password.js') -%>
 
-<form id="reset" method="post" action="/seller/password/reset">
+<form id="reset" method="post" action="/password/reset">
 	<input type="hidden" name="seller[emailAddress]" value="<%=emailAddress %>" />
 	<fieldset>
 		<legend>Password Reset</legend>
