--- a/views/sellers/profile-page.ejs
+++ b/views/sellers/profile-page.ejs
@@ -12,38 +12,39 @@ if (sellerType === 'dealership') {
 
 <h2>My Profile</h2>
 
-<form method="get" action="/seller/remove">
-    <fieldset id="dealership" style="display: <%= dlrDisplay %>">
+<form method="get" action="/seller/<%=sellerId%>/remove">
+    <fieldset id="dealership" style="display: <%=dlrDisplay%>">
 		<p><i class="icon-briefcase"></i>&nbsp;<strong><%= dealershipName %></strong></p>
 		<div class="row">
 			<div class="span4">
-				<p><i class="icon-road"></i>&nbsp;<%= streetAddress1 %></p>
-				<p><i class="icon-road"></i>&nbsp;<%= streetAddress2 %></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%= town %></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%= province %></p>
+				<p><i class="icon-road"></i>&nbsp;<%=address.streetAddress%></p>
+				<p><i class="icon-road"></i>&nbsp;<%=address.suburb%></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%=address.town%></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%=address.province%></p>
 			</div>
 			<div class="span4">
 				<div class="span6">
-					<p><i class="icon-user"></i>&nbsp; <%= fullname %></p>
-					<p><i class="icon-envelope"></i>&nbsp; <%= email %></p>
-					<p><i class="icon-home"></i>&nbsp; <%= telephone %></p>
-					<p><i class="icon-signal"></i>&nbsp; <%= cellphone %></p>
+					<p><i class="icon-user"></i>&nbsp; <%=fullname%></p>
+					<p><i class="icon-envelope"></i>&nbsp; <%=email%></p>
+					<p><i class="icon-home"></i>&nbsp; <%=contactNumbers.telephone%></p>
+					<p><i class="icon-signal"></i>&nbsp; <%=contactNumbers.cellphone%></p>
 				</div>
 
 			</div>
 		</div>
     </fieldset>
-    <fieldset id="privateSeller" style="display: <%= psDisplay %>">
+    <fieldset id="privateSeller" style="display: <%=psDisplay%>">
 		<div class="row">
 			<div class="span4">
-				<p><i class="icon-user"></i>&nbsp; <%= fullname %></p>
-				<p><i class="icon-envelope"></i>&nbsp; <%= email %></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%= town %></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%= province %></p>
+				<p><i class="icon-user"></i>&nbsp; <%=fullname%></p>
+				<p><i class="icon-envelope"></i>&nbsp; <%=email%></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%=address.town%></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%=address.province%></p>
 			</div>
 			<div class="span4">
-				<p><i class="icon-home"></i>&nbsp; <%= telephone %></p>
-				<p><i class="icon-signal"></i>&nbsp; <%= cellphone %></p>
+			<% for (var i = 0; i < contactNumbers.length; i++) { %>
+				<p><i class="icon-home"></i>&nbsp; <%=contactNumbers[i]%></p>
+			<% } %>
 			</div>
 		</div>
     </fieldset>
